--- a/.env.example
+++ b/.env.example
@@ -31,4 +31,9 @@ CORS_ALLOWED_ORIGINS=http://localhost:3000
 
 # Server Configuration
 SERVER_PORT=8080
-COOKIE_SECURE=false
+COOKIE_
+
+
+
+
+SECURE=false
